# metered-rs

./: .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt-unstable.toml
.cargo/: config
demo/: Cargo.toml
demo/src/: baz_expanded.rs  main.rs  measured_impl.rs  metered_impl.rs
demos/: Cargo.toml
demos/demo-nightly/: Cargo.toml
demos/demo-nightly/src/: baz.rs  biz.rs  main.rs
demos/demo-stable/: Cargo.toml
demos/demo-stable/src/: baz.rs  biz.rs  boz.rs  main.rs
demos/src/: baz.rs  biz.rs  main.rs
metered/: Cargo.toml
metered-core/: Cargo.toml
metered-core/src/: lib.rs
metered-demo/: Cargo.toml
metered-demo/src/: baz_expanded.rs  main.rs  measured_impl.rs
metered-macro/: Cargo.toml
metered-macro/src/: attrs_common.rs  error_count.rs  error_count_opts.rs  lib.rs  measure_opts.rs  metered.rs  metered_opts.rs
metered/proptest-regressions/: num_wrapper.txt
metered/src/: atomic.rs  clear.rs  hdr_histogram.rs  int_counter.rs  int_gauge.rs  lib.rs  metric.rs  num_wrapper.rs  time_source.rs
metered/src/common/: error_count.rs  hit_count.rs  in_flight.rs  mod.rs  none_count.rs  response_time.rs
metered/src/common/throughput/: atomic_tps.rs  mod.rs  tx_per_sec.rs
src/: experiments.rs  lib.rs
