[package]
name = "metered-demo-nightly"
version = "0.1.0"
authors = ["Simon Chemouil <simon.chemouil@lambdacube.fr>"]
edition = "2018"

#break out of workspace
[workspace]

[dependencies]
metered = { version = "0.4", path = "../metered" }
hdrhistogram = "7.1"
rand = "0.7"
atomic = "0.4"
tokio = { version = "0.2", features = [ "time" ] }
serde = { version = "1.0", features = ["derive"] }
serde_prometheus = "0.1"
thiserror = "1.0"
