[package]
name = "metered-macro"
version = "0.2.0"
authors = ["Simon Chemouil <simon.chemouil@lambdacube.fr>"]
license = "Apache-2.0 OR MIT"
readme = "../README.md"
keywords = ["metrics", "macro"]
repository = "https://github.com/magnet/metered-rs"
description = """
Fast, ergonomic metrics for Rust!
"""
categories = ["rust-patterns", "development-tools::profiling", "data-structures", "algorithms", "asynchronous"]
edition = "2018"

[dependencies]
syn = {version= "0.15", features = ["full"] }
synattra = "0.1.1"
aspect-weave =  "0.1.1"
quote = "0.6"
proc-macro2 = "0.4"
heck = "0.3.1"
indexmap = "1.0.2"




[lib]
proc-macro = true