[package]
name = "metered-macro"
version = "0.3.0"
authors = ["Simon Chemouil <simon.chemouil@lambdacube.fr>"]
license = "Apache-2.0 OR MIT"
readme = "../README.md"
keywords = ["metrics", "macro"]
repository = "https://github.com/magnet/metered-rs"
description = """
Fast, ergonomic metrics for Rust!
"""
categories = ["rust-patterns", "development-tools::profiling", "data-structures", "algorithms", "asynchronous"]
edition = "2018"

[dependencies]
syn = {version= "1.0", features = ["full"] }
aspect-weave = "0.2.0"
synattra = "0.2.0"
quote = "1.0"
proc-macro2 = "1.0"
heck = "0.3"
indexmap = "1.1"




[lib]
proc-macro = true