[package]
name = "metered-macro"
version = "0.9.0"
authors = ["Simon Chemouil <simon.chemouil@lambdacube.fr>"]
license = "Apache-2.0 OR MIT"
readme = "../README.md"
keywords = ["metrics", "macro"]
repository = "https://github.com/magnet/metered-rs"
description = """
Fast, ergonomic metrics for Rust!
"""
categories = ["rust-patterns", "development-tools::profiling", "data-structures", "algorithms", "asynchronous"]
edition = "2018"

[dependencies]
syn = {version= "1.0", features = ["full"] }
aspect-weave = "0.2"
synattra = "0.2"
quote = "1.0"
proc-macro2 = "1.0"
heck = "0.4"
indexmap = "1.8"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
metered = { path = "../metered" }
thiserror = "1.0"
rand = "0.8"

[features]
# When enabled, the error count macro will skip serializing cleared entries (e.g counters with value 0)
# This can be overridden with the `skip_cleared` macro attribute
error-count-skip-cleared-by-default = []

[lib]
proc-macro = true