[package]
name = "metered"
version = "0.3.0"
authors = ["Simon Chemouil <simon.chemouil@lambdacube.fr>"]
license = "Apache-2.0 OR MIT"
readme = "../README.md"
keywords = ["metrics", "macro"]
repository = "https://github.com/magnet/metered-rs"
description = """
Fast, ergonomic metrics for Rust!
"""
categories = ["rust-patterns", "development-tools::profiling", "data-structures", "algorithms", "asynchronous"]
edition = "2018"

[dependencies]
metered-macro = "0.3.0"
aspect = "0.2.0"
hdrhistogram = "6.3"
atomic = "0.4"
parking_lot = "0.9"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
rand = "0.7"

[features]
# no features by default
default = []

# Use the serde feature to make metered' types implement Serialize
serialize = []
