[package]
name = "metered"
version = "0.8.0"
authors = ["Simon Chemouil <simon.chemouil@lambdacube.fr>"]
license = "Apache-2.0 OR MIT"
readme = "../README.md"
keywords = ["metrics", "macro"]
repository = "https://github.com/magnet/metered-rs"
description = """
Fast, ergonomic metrics for Rust!
"""
categories = ["rust-patterns", "development-tools::profiling", "data-structures", "algorithms", "asynchronous"]
edition = "2018"

[dependencies]
metered-macro = { version = "0.8.0", path = "../metered-macro" }
aspect = "0.3"
hdrhistogram = "7.5"
atomic = "0.5"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
cfg-if = "1.0.0"

[dev-dependencies]
rand = "0.8"
proptest = "1.0"

[features]
# no features by default
default = []

# Use the serde feature to make metered' types implement Serialize
serialize = []

# When enabled, the error count macro will skip serializing cleared entries (e.g counters with value 0)
# This can be overridden with the `skip_cleared` macro attribute
error-count-skip-cleared-by-default = ["metered-macro/error-count-skip-cleared-by-default"]

