[package]
name = "metered-demo-nightly"
version = "0.1.0"
authors = ["Simon Chemouil <simon.chemouil@lambdacube.fr>"]
edition = "2018"

#break out of workspace
[workspace]

[dependencies]
metered = { path = "../../metered", version = "0.1.0" }
hdrhistogram = "6.1.1"
rand = "0.6.5"
atomic = "0.4"
tokio = { version = "0.1.15", features = ["async-await-preview"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
