[package]
name = "metered-demo-nightly"
version = "0.1.0"
authors = ["Simon Chemouil <simon.chemouil@lambdacube.fr>"]
edition = "2018"

#break out of workspace
[workspace]

[dependencies]
metered = { path = "../../metered" }
hdrhistogram = "6.3"
rand = "0.7"
atomic = "0.4"
tokio = "0.1.22"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

[dependencies.futures]
package = "futures-preview"
version = "0.3.0-alpha.17"
features = ["nightly", "async-await", "compat"]
