[package]
name = "metered-demo-stable"
version = "0.1.0"
authors = ["Simon Chemouil <simon.chemouil@lambdacube.fr>"]
edition = "2018"

#break out of workspace
[workspace]

[dependencies]
metered = { path = "../../metered" }
hdrhistogram = "6.3"
rand = "0.7"
atomic = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
